<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/english"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_en"
        android:visible="true"/>
    <item
        android:id="@+id/portuguese"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_pt"
        android:visible="true"/>
    <item
        android:id="@+id/italy"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_it"
        android:visible="true"/>
    <item
        android:id="@+id/spanish"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_es"
        android:visible="true"/>
    <item
        android:id="@+id/chinese"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_zh"
        android:visible="true"/>
    <item
        android:id="@+id/german"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_de"
        android:visible="true"/>
    <item
        android:id="@+id/russian"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_ru"
        android:visible="true"/>
    <item
        android:id="@+id/french"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_fr"
        android:visible="true"/>
    <item
        android:id="@+id/japanese"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_ja"
        android:visible="true"/>
    <item
        android:id="@+id/polish"
        app:showAsAction="ifRoom|withText"
        android:title="@string/text_pl"
        android:visible="true"/>
</menu>